skan_tests/error/failPrint.sk

int main() {
    int a = 1;
    print (a);
    string s = "test";
    print (s); /* cant print string like this, needs to be print_str() */
    return 0;
}